--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
-EditorStartupMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
+GameDefaultMap=/Game/Maps/L_Nathan_Map.L_Nathan_Map
+EditorStartupMap=/Game/Maps/L_Nathan_Map.L_Nathan_Map
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
