--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
 EditorStartupMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
-GlobalDefaultGameMode=/Game/BluePrints/Game/BP_GameMode.BP_GameMode_C
+GlobalDefaultGameMode=/Game/Nathan/GM_Car.GM_Car_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
