--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
-EditorStartupMap=/Game/Maps/L_Joslyn_Map.L_Joslyn_Map
+GameDefaultMap=/Game/Maps/L_Hailey_Map.L_Hailey_Map
+EditorStartupMap=/Game/Maps/L_MainMenu.L_MainMenu
 GlobalDefaultGameMode=/Game/Nathan/GM_Car.GM_Car_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
