--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F5FE8D0F4E979394F630D4B0BBFC4962
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
